correction safari

--- a/petite_resolution.css
+++ b/petite_resolution.css
@@ -60,6 +60,7 @@ margin-left: 1vw;
 .droiteparagraphe  > article
 {
   display: flex;
+  display: -webit-flex;
   flex-direction: column;
 }
 
@@ -78,6 +79,7 @@ margin-left: 1vw;
 .header
 {
     display: flex;
+    display: -webkit-flex;
     margin-right: 5vw;
     font-size: 1.5em;
     margin-top: 5vw;
@@ -143,6 +145,7 @@ overflow-wrap: break-word;
 .list > ul
 {
 display: flex;
+display: -webkit-flex;
 flex-direction: column;
 }
 .list > ul > li
